<resources>
    <string name="app_name">Podcasts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue_our_app">Login to continue Our App</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">OR</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="no_account">Don\'t have an account?\u0020</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="sign_up_and_start_listening_to_podcasts">Sign up and start listening to podcasts</string>
    <string name="user_name">User Name</string>
    <string name="agree_to_tos">By signing up you indicate that you have read and agreed to the\u0020</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="has_account">Already have an account?\u0020</string>
    <string name="reset_request">Send Password Reset</string>
    <string name="password_resent_email">Enter your email below. \n We\'ll look for your account and send you a \n password resent email</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="podcasts">Podcasts</string>
    <string name="home">Home</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="search_hint">Search here…</string>
    <string name="terms_cond_text">Lorem ipsum dolor sit amet retreats talk repairer gladness sweat deceit stripes meet farthest remain, burning twinkle. Glance merchantibility milk talk inaccurate, viewless twinkle masterless five. Pere crystal shoes macintyre carts yeaned. Milk girth wisely news talk promontory dauntless choose voices, england deck befriended tracts. Crystal sollicitudin deck, length offers healthful trumpet. Indicate string tracts, down, girth, triumph rivulets crags deceive provisions trumpet. Pere sollicitudin twirl inaccurate deceive twinkle orbit remain eget glimmer newer. Diamonds befriended takes grazing voices viewless, scared triumph infold exodus newer girth yeaned. Girth farthest offers unrepenting curabitur, crystal glance ears infold, generous meaning trumpet retreats. Spells secret streams, leave seen mollis perches lawful clock archangels tincidunt, solitary its. Thing abreast prey chased kernan once bitter coil warned pius. Ad journeys revenue coil, secret down, base saviour, archangels streams repine, dust imitates spells. Evermore granted reins lungs journeys chant, crave leave. Minnow pharetra crave, prey lifts warned bias seen secret email granted. Italy lavishly moan notifies rested replace revenue pines mollis reins five. Warranties intellectual ends damsels pharetra, journeys thing lungs revenue. Few number vermilion intellectual, sweetheart searched accept, reins thing, flamed, replace, warranties august distress. Spells ad intellectual, sculptor author, lungs granted prey secret facilisi lavishly allures finger alone down. Non leave bitter warned copse dew vermilion, italy august tugs. Bate veil spells triple exile unmake ploughmen, holy masks shouted my conscious. Polar rose pit things mass swim wipe, table howsoever unmake fetched barrier presence. Caged dedicated glad, forests six weltering porttitor messages.</string>
    <string name="search_result">Search result</string>
    <string name="favorite_podcasts">Favorite Podcasts</string>
    <string name="podcast_station">Podcast Station</string>
    <string name="log_out">Log out</string>
    <string name="close">Close</string>
    <string name="success">success</string>
    <string name="verify_email">Please verify your account</string>
    <string name="fill_all_fields">Please fill all fields</string>
    <string name="incorrect_email_format">Email Format is incorrect</string>
    <string name="no_internet_connection">There is no internet connection</string>
    <string name="_0_00">0:00</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
</resources>