<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.log_in.LogInFragment"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImgV"
            android:layout_marginTop="53.9dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@mipmap/ic_logo"
            android:scaleY="1.2"
            android:scaleX="1.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtVWelcome"
            android:textSize="20sp"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:layout_marginTop="23dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImgV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/continueTxtV"
            app:layout_constraintTop_toBottomOf="@id/txtVWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/text_gray"
            android:textSize="14sp"
            android:layout_marginTop="2dp"
            android:text="@string/login_to_continue_our_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTxtEmail"
            app:layout_constraintTop_toBottomOf="@id/continueTxtV"
            android:background="@drawable/input_backg_design"
            android:layout_marginTop="26dp"
            android:hint="@string/email_address"
            android:textSize="12sp"
            android:paddingStart="21dp"
            android:lines="1"
            android:drawablePadding="14.1dp"
            android:drawableStart="@drawable/ic_outline_email_24"
            android:textColorHint="@color/start_icon_clr"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTxtPassword"
            app:layout_constraintTop_toBottomOf="@id/edtTxtEmail"
            android:background="@drawable/input_backg_design"
            android:layout_marginTop="18dp"
            android:hint="@string/password"
            android:textSize="12sp"
            android:paddingStart="21dp"
            android:lines="1"
            android:drawablePadding="14.1dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:textColorHint="@color/start_icon_clr"
            android:layout_width="match_parent"
            android:layout_height="48dp"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chBRememberMe"
            app:layout_constraintTop_toBottomOf="@id/edtTxtPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/remember_me"
            android:textColor="@color/rememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>