<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    android:gravity="center_horizontal"
    android:layerType="software"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="54dp"
        android:text="@string/password_resent_email"
        android:textAlignment="center"
        android:textColor="@color/text_gray"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/input_backg_design"
        android:drawableStart="@drawable/ic_outline_email_24"
        android:drawablePadding="14.1dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:paddingStart="21dp"
        android:paddingEnd="8dp"
        android:textColor="@color/white"
        android:textColorHint="@color/start_icon_clr"
        android:textSize="12sp" />

    <include
        android:id="@+id/sendResetEmailBtn"
        layout="@layout/auth_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="30dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/logInHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:textSize="12sp" />


</androidx.appcompat.widget.LinearLayoutCompat>